fix 1 số thẻ + lưu data bài hát trên local storeage

--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@
                 <span>Body Paint</span>
                 <p><br>Arctic Monkeys</p>
               </li>
+            </ul>
           </section>
 
           <!--mood-->
@@ -535,7 +536,9 @@
                 <span>Chill Tracks</span>
                 <p><br>Softer kinda dance.</p>
               </li>
+            </ul>
               <!--Popular new releases-->
+          </section>
         </main>
       </div>
     </div>
