--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/style.css">
-  <link rel="icon" href="./assets/favicon.png">
+  <link rel="icon" href="./assets/icon/favicon.png">
   <script src="./scripts/dropdown.js" defer></script>
 
 </head>
@@ -146,7 +146,7 @@
             <!-- recent playlists -->
             <ul id="playlistsRecentes" class="mb-5">
               <li>
-                <img src="./assets/1.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/1.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">sleep deprived</span>
                 <button type="button" class="btn me-3" onclick="playAudio(1)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -157,7 +157,7 @@
               </li>
 
               <li>
-                <img src="./assets/2.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/2.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">adrenaline rush</span>
                 <button type="button" class="btn me-3" onclick="playAudio(2)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -168,7 +168,7 @@
               </li>
 
               <li>
-                <img src="./assets/3.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/3.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">impulse</span>
                 <button type="button" class="btn me-3" onclick="playAudio(2)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -179,7 +179,7 @@
               </li>
 
               <li>
-                <img src="./assets/4.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/4.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">sixth gear</span>
                 <button type="button" class="btn me-3" onclick="playAudio(2)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -190,7 +190,7 @@
               </li>
 
               <li>
-                <img src="./assets/5.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/5.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">3:14 am</span>
                 <button type="button" class="btn me-3" onclick="playAudio(1)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -202,7 +202,7 @@
 
 
               <li>
-                <img src="./assets/6.jpeg" :alt="playlist.nome">
+                <img src="./assets/playlistImage/6.jpeg" :alt="playlist.nome">
                 <span class="fw-semibold ms-3 me-auto">serenity</span>
                 <button type="button" class="btn me-3" onclick="playAudio(1)"><svg role="img" height="24" width="24"
                     viewBox="0 0 24 24">
@@ -220,12 +220,7 @@
 
 
 
-          <!-- Thêm thẻ audio để phát file mp3 -->
-          <audio id="audioPlayer" controls style="display: none;">
-            <!-- Trình duyệt không hỗ trợ thẻ audio. -->
-            <source id="audioSource" type="audio/mp3">
-            Your browser does not support the audio element.
-          </audio>
+          
           <section class="feedPlaylist">
 
           </section>
@@ -255,7 +250,7 @@
       <div id="audioBar" class="p-3 d-flex justify-content-between">
 
         <div id="musicaPlay">
-          <img src="./assets/celestial.jpg" alt="Song Image" class="song-image">
+          <img src="./assets/playlistImage/celestial.jpg" alt="Song Image" class="song-image">
           <div class="song-details">
             <p class="song-name">Celestial</p>
             <p class="author">Ed Shreeran</p>
@@ -369,6 +364,16 @@
           </div>
 
         </div>
+
+
+
+
+        <!-- Thêm thẻ audio để phát file mp3 -->
+        <audio id="audioPlayer" controls style="display: none;">
+          <!-- Trình duyệt không hỗ trợ thẻ audio. -->
+          <source id="audioSource" type="audio/mp3">
+          Your browser does not support the audio element.
+        </audio>
       </div>
     </div>
   </div>
