Thay path phan searching

--- a/search.html
+++ b/search.html
@@ -191,7 +191,7 @@
               <br>
               <ul class="playlists">
                 <li>
-                  <img src="./assets/7.jpeg">
+                  <img src="./assets/playlistImage/7.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -202,7 +202,7 @@
                 </li>
 
                 <li>
-                  <img src="./assets/8.jpeg">
+                  <img src="./assets/playlistImage/8.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -213,7 +213,7 @@
                 </li>
 
                 <li>
-                  <img src="./assets/9.jpeg">
+                  <img src="./assets/playlistImage/9.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -224,7 +224,7 @@
                 </li>
 
                 <li>
-                  <img src="./assets/10.jpeg">
+                  <img src="./assets/playlistImage/10.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -235,7 +235,7 @@
                 </li>
 
                 <li>
-                  <img src="./assets/11.jpeg">
+                  <img src="./assets/playlistImage/11.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -246,7 +246,7 @@
                 </li>
 
                 <li>
-                  <img src="./assets/12.jpeg">
+                  <img src="./assets/playlistImage/12.jpeg">
                   <button type="button" class="btn me-3"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                       <path
                         d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
@@ -262,130 +262,77 @@
 
             <!-- Made for you -->
             <section class="feedPlaylist">
-
-
               <h4 class="mb-3"><a href="#">Browse all</a></h4>
               <div class="searching-recommend">
                 <div class="searching-section">
                   <h4>Podcasts</h4>
-                  <img src="./img/searching/otto_loucha.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/otto_loucha.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Live events</h4>
-                  <img src="./img/searching/live_events.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/live_events.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Made for you</h4>
-                  <img src="./img/searching/lol_playlist.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/lol_playlist.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>J-pop</h4>
-                  <img src="./img/searching/jpop.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/jpop.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>K-pop</h4>
-                  <img src="./img/searching/kpop.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/kpop.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Animes</h4>
-                  <img src="./img/searching/jpop_anime.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/jpop_anime.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Cooking & Dining</h4>
-                  <img src="./img/searching/cooking_and_dining.png" alt="" class="searching-img">
+                  <img src="./assets/searching/cooking_and_dining.png" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Honkai Impact 3rd</h4>
-                  <img src="./img/searching/otto_loucha.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/otto_loucha.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Vietnamese Music</h4>
-                  <img src="./img/searching/vpop.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/vpop.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Instrumental</h4>
-                  <img src="./img/searching/instrumental.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/instrumental.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Nature & Noise</h4>
-                  <img src="./img/searching/nature.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/nature.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Netflix</h4>
-                  <img src="./img/searching/netflix.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/netflix.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Party</h4>
-                  <img src="./img/searching/party_music.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/party_music.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Hip-Hop</h4>
-                  <img src="./img/searching/rapcavia.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/rapcavia.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Rock</h4>
-                  <img src="./img/searching/bocchi_da_rock.webp" alt="" class="searching-img">
+                  <img src="./assets/searching/bocchi_da_rock.webp" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Work Out</h4>
-                  <img src="./img/searching/work_out_music.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/work_out_music.jpg" alt="" class="searching-img">
                 </div>
                 <div class="searching-section">
                   <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
+                  <img src="./assets/searching/summer.jpg" alt="" class="searching-img">
                 </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
-                <div class="searching-section">
-                  <h4>Summer</h4>
-                  <img src="./img/searching/summer.jpg" alt="" class="searching-img">
-                </div>
+                
               </div>
 
               
