--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
   </div>
 
   <script src="./scripts/script.js"></script>
-  <script src="./scripts/render.js"></script>
+  <!-- <script src="./scripts/render.js"></script> -->
 </body>
 
 </html>
