--- a/index.html
+++ b/index.html
@@ -234,6 +234,42 @@
 
           </section>
 
+          <div class="footer">
+            <div class="first-footer">
+                <div class="infor">
+                    <p><b>Company</b></p>
+                    <a href="">About</a> <br><p></p>
+                    <a href="">Jobs</a> <br><p></p>
+                    <a href="">For the record</a>
+                </div>
+
+                <div class="infor">
+                    <p><b>Communities</b></p>
+                    <a href="">For artists</a> <br><p></p>
+                    <a href="">Developers</a> <br><p></p>
+                    <a href="">Advertising</a> <br><p></p>
+                    <a href="">Investor</a> <br><p></p>
+                </div>
+
+                <div class="infor">
+                    <p><b>Useful links</b></p>
+                    <a href="">Support</a> <br><p></p>
+                    <a href="">Free Moblile App</a>
+                </div>
+            </div>
+            <div class="line-break"></div>
+
+            <div class="second-footer">
+                <a href="">Legal</a>
+                <a href="">Privacy Center</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Cookies</a>
+                <a href="">About Ads</a>
+                <a href="">Accessibility</a>
+
+                <p>© 2023 Spotify AB</p>
+            </div>
+          </div>
 
         </main>
       </div>
