--- a/search.html
+++ b/search.html
@@ -15,6 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="./scripts/script.js" defer></script>
   <script src="./scripts/dropdown.js" defer></script>
+  <script>src="./scripts/search.js"</script>
 </head>
 
 
@@ -146,7 +147,8 @@
             <div class="div--hun">
               <form class="form--hun"><input class=" cPwEdQ QO9loc33XC50mMRUCIvf" maxlength="800" autocorrect="off"
                   autocapitalize="off" spellcheck="false" placeholder="What do you want to listen to?"
-                  data-testid="search-input" value="" style="color: rgb(0, 0, 0);"></form>
+                  data-testid="search-input" value="" style="color: rgb(0, 0, 0);" id = "searchInput">
+                </form>
             </div>
           </div>
 
