--- a/admin.html
+++ b/admin.html
@@ -144,7 +144,7 @@
             return premiumAccounts;
         }
 
-        let accounts = getAccountsFromLocalStorage();
+        // let accounts = getAccountsFromLocalStorage();
 
         let premiumAccounts = getPremiumAccountsFromLocalStorage();
 
@@ -157,38 +157,38 @@
             localStorage.setItem('premiumAccounts', string);
         }
 
-        // let accounts = [
-        //     {
-        //         firstName: "Nakano",
-        //         lastName: "Ichika",
-        //         email: "user1@gmail.com",
-        //         password: "password1",
-        //     },
-        //     {
-        //         firstName: "Nakano",
-        //         lastName: "Nino",
-        //         email: "user2@gmail.com",
-        //         password: "password1",
-        //     },
-        //     {
-        //         firstName: "Nakano",
-        //         lastName: "Miku",
-        //         email: "user3@gmail.com",
-        //         password: "password1",
-        //     },
-        //     {
-        //         firstName: "Nakano",
-        //         lastName: "Yotsuba",
-        //         email: "user4@gmail.com",
-        //         password: "password1",
-        //     },
-        //     {
-        //         firstName: "Nakano",
-        //         lastName: "Itsuki",
-        //         email: "user5@gmail.com",
-        //         password: "password1",
-        //     },
-        // ];
+        let accounts = [
+            {
+                firstName: "Nakano",
+                lastName: "Ichika",
+                email: "user1@gmail.com",
+                password: "password1",
+            },
+            {
+                firstName: "Nakano",
+                lastName: "Nino",
+                email: "user2@gmail.com",
+                password: "password1",
+            },
+            {
+                firstName: "Nakano",
+                lastName: "Miku",
+                email: "user3@gmail.com",
+                password: "password1",
+            },
+            {
+                firstName: "Nakano",
+                lastName: "Yotsuba",
+                email: "user4@gmail.com",
+                password: "password1",
+            },
+            {
+                firstName: "Nakano",
+                lastName: "Itsuki",
+                email: "user5@gmail.com",
+                password: "password1",
+            },
+        ];
 
         function displayDataTable() {
             const table = document.querySelector('.data-user');
@@ -277,7 +277,7 @@
 
         }
 
-        
+        window.onload = storeAccountsInLocalStorage();
         window.onload = displayDataTable();
         window.onload = displayDataTablePremium();
 
