--- a/index.html
+++ b/index.html
@@ -221,18 +221,10 @@
 
 
           
-          <section class="feedPlaylist">
-
-          </section>
-          <section class="feedPlaylist">
-
-          </section>
-          <section class="feedPlaylist">
-
-          </section>
-          <section class="feedPlaylist">
-
-          </section>
+          <section class="feedPlaylist"></section>
+          <section class="feedPlaylist"></section>
+          <section class="feedPlaylist"></section>
+          <section class="feedPlaylist"></section>
 
           <div class="footer">
             <div class="first-footer">
@@ -282,6 +274,9 @@
           </path>
         </svg></button>
     </div>
+
+
+
     <div id="footer">
       <div id="audioBar" class="p-3 d-flex justify-content-between">
 
@@ -304,7 +299,7 @@
                 </svg>Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link d-flex flex-column align-items-center"><svg role="img" height="20" width="20"
+              <a href="search.html" class="nav-link d-flex flex-column align-items-center"><svg role="img" height="20" width="20"
                   fill="white" viewBox="0 0 24 24">
                   <path
                     d="M10.533 1.279c-5.18 0-9.407 4.14-9.407 9.279s4.226 9.279 9.407 9.279c2.234 0 4.29-.77 5.907-2.058l4.353 4.353a1 1 0 101.414-1.414l-4.344-4.344a9.157 9.157 0 002.077-5.816c0-5.14-4.226-9.28-9.407-9.28zm-7.407 9.279c0-4.006 3.302-7.28 7.407-7.28s7.407 3.274 7.407 7.28-3.302 7.279-7.407 7.279-7.407-3.273-7.407-7.28z">
@@ -409,7 +404,7 @@
 
 
         <!-- Thêm thẻ audio để phát file mp3 -->
-        <audio id="audioPlayer" controls style="display: none;">
+        <audio id="audioPlayer" class="d-none" controls >
           <!-- Trình duyệt không hỗ trợ thẻ audio. -->
           <source id="audioSource" type="audio/mp3">
           Your browser does not support the audio element.
