--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
   <title>Login or Sign Up</title>
   <link rel="stylesheet" href="./styles/login.css">
   <link rel="icon" href="./assets/favicon.png">
+  <script src="./scripts/login.js" defer></script>
+  <script src="https://kit.fontawesome.com/55973b77b0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,7 +73,7 @@
 
           </div>
           <div class="btn--kliye">
-            <button class="btn--hunre" onclick="redirectToIndex()">LOG IN</button>
+            <button class="btn--hunre" onclick="login()">LOG IN</button>
           </div>
           <hr class="gjuJVb" />
           <div id="sign-up-section" data-testid="signup-section">
@@ -90,12 +92,7 @@
     </div>
   </div>
   <script src="https://kit.fontawesome.com/55973b77b0.js" crossorigin="anonymous"></script>
-  <script>
-    function redirectToIndex() {
-      window.location.href = 'index.html';
-    }
 
-  </script>
 </body>
 
 </html>
